GCP/k8s/nginx/oauth2-proxy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oauth2-proxy-netpol
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      app: oauth2-proxy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx
  egress:
    - ports:
        - port: 53
          protocol: UDP
    - ports:
        - port: 443  # to reach OIDC provider externally
